# percolator-prog

./: .gitignore  CLAUDE.md  Cargo.toml  OTTERSEC_ISSUE_DRAFT.md  PROOFS_PLAN.md  README.md  REPRO_BUILD_NOTE.md  SECURITY.md  SECURITY_FINDINGS_2026_02_05.md  VANITY_KEYGRIND.md  VERIFYING.md  WEBSITE_SECURITY_COPY.md  audit.md  bugs.md  plan.md
.cargo/: config.toml
.github/workflows/: upstream-sync.yml  verified-build.yml
scripts/: build_verified.sh  deploy_and_verify.sh  proof-strength-audit-results.md  verify.sh
security-research/: session5.md
src/: percolator.rs
tests/: cu_benchmark.rs  fuzz.rs  i128_alignment.rs  integration.rs  kani.rs  unit.rs
