[package]
name = "percolator-prog"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
name = "percolator_prog"
path = "src/percolator.rs"

[features]
no-entrypoint = []
test-sbf = []
fuzz = []

[dependencies]
solana-program = "1.18"
spl-token = { version = "4.0", features = ["no-entrypoint"] }
thiserror = "1.0"
bytemuck = { version = "1.14", features = ["derive", "min_const_generics"] }
pyth-sdk-solana = "0.10"
pinocchio = "0.6" # Assuming standard registry version, otherwise will need to adjust
arrayref = "0.3"
num-derive = "0.4"
num-traits = "0.2"
percolator = { path = "../percolator" }

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
rand = "0.8"
rand_xorshift = "0.3"
proptest = "1.4" # For fuzzing/property testing
# kani = "0.1" # Removed to avoid resolution error, assume environment provided or use specific version if known
